--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="app.js" defer></script>
 </head>
 <body>
-    
+    <input type="text" id="inputText" value="Enter a magic number!">
+    <button onclick="printAccumulate()">Click me to do some amazing maths!</button> 
+    <span id="result"></span>
 </body>
 </html>
